# libsms

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  coverage.xml  healthcheck.sh  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml
assets/: example_experiment.json
documentation/source/: conf.py  getting_started.rst  index.rst  modules.rst  smslib.rst
notebooks/: analysis.py  api.py  api_requests.py  data.py
scripts/: healthcheck.sh
src/libsms/: api.py  client_wrapper.py  notebook_api.py
src/tests/: conftest.py
src/tests/api/: test_parquet.py  test_simulation.py
src/tests/client_wrapper/: test_analysis.py  test_simulation.py  test_simulation_data.py
src/tests/fixtures/: api_fixtures.py
