[project]
name = "smslib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "orjson>=3.11.1",
    "polars[all]>=1.32.2",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.setuptools]
packages = ["smslib"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
